--- a/homeassistant-config/automations/bathroom/bathroom-night-light.yaml
+++ b/homeassistant-config/automations/bathroom/bathroom-night-light.yaml
@@ -2,40 +2,27 @@
 id: '1634830528969'
 alias: 'Bathroom night light - ON/OFF'
 description: 'Handle night light based on movement'
+mode: restart
 trigger:
-  - type: motion
-    platform: device
-    device_id: 5e156544df1eb4fb2199eee4a8add495
-    entity_id: binary_sensor.ewelink_ms01_1ace6722_ias_zone
-    domain: binary_sensor
-    id: banq_occupied
-  - type: no_motion
-    platform: device
-    device_id: 5e156544df1eb4fb2199eee4a8add495
-    entity_id: binary_sensor.ewelink_ms01_1ace6722_ias_zone
-    domain: binary_sensor
-    id: banq_not_occupied
+  platform: state
+  entity_id: binary_sensor.zaetost_bania_occupancy
+  from: "off"
+  to: "on"
 condition:
   - condition: time
     after: '21:00:00'
     before: '08:00:00'
 action:
-  - choose:
-    - conditions:
-      - condition: trigger
-        id: banq_occupied
-      sequence:
-      - type: turn_on
-        device_id: fafd5d3476047a633dfe610030251bb9
-        entity_id: switch.sonoff_01minizb_abf295fe_on_off
-        domain: switch
-    - conditions:
-      - condition: trigger
-        id: banq_not_occupied
-      sequence:
-      - type: turn_off
-        device_id: fafd5d3476047a633dfe610030251bb9
-        entity_id: switch.sonoff_01minizb_abf295fe_on_off
-        domain: switch
-mode: restart
-max_exceeded: silent
+  - service: switch.turn_on
+    target:
+      entity_id: switch.lampa_bania
+  - wait_for_trigger:
+      platform: state
+      entity_id: binary_sensor.zaetost_bania_occupancy
+      from: "on"
+      to: "off"
+  - delay:
+      minutes: 1
+  - service: switch.turn_off
+    target:
+      entity_id: switch.lampa_bania
