--- a/renovate.json
+++ b/renovate.json
@@ -1,10 +1,3 @@
 {
-  "extends": [ "config:base" ],
-  "packageRules": [
-    {
-      "matchDatasources": [ "docker" ],
-      "matchPackageNames": [ "homeassistant/home-assistant" ],
-      "allowedVersions": "/^20[0-9]{2}\\.([1-9]|0[1-9]|1[012])\\.[1-9][0-9]?/"
-    }
-  ]
+  "extends": [ "config:base" ]
 }
