--- a/mosquitto/config/mosquitto.conf
+++ b/mosquitto/config/mosquitto.conf
@@ -40,7 +40,7 @@ persistent_client_expiration 14d
 persistence true
 
 # Where we save stuff
-persistence_location /mosquitto/data/
+persistence_location /mosquitto/data
 
 # Treat next settings as number of changes (if true) or seconds otherwise
 autosave_on_changes true
