--- a/.github/workflows/homeassistant.yaml
+++ b/.github/workflows/homeassistant.yaml
@@ -21,7 +21,7 @@ jobs:
           args: yamllint .
 
   remarklint:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - name: Getting your configuration from GitHub
         uses: actions/checkout@v3
