--- a/homeassistant-config/configuration.yaml
+++ b/homeassistant-config/configuration.yaml
@@ -7,6 +7,7 @@ homeassistant:
   time_zone: "Europe/Sofia"
   unit_system: metric
   currency: BGN
+  country: BG
   # load packages
   packages: !include_dir_named integrations
   internal_url: !secret tts_base_url
