--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,6 +109,11 @@ services:
       - svcs
     environment:
       - TZ=$TZ
+    healthcheck:
+          test: 'curl -m 90 -sLf http://localhost:8123 || date >> /config/healthcheck' #| pkill -9 python3'
+          interval: 90s
+          timeout: 60s
+          retries: 2
 
   mqtt:
     restart: always
@@ -125,6 +130,11 @@ services:
       - svcs
     environment:
       - TZ=$TZ
+    healthcheck:
+      test: "mosquitto_sub -E -t '#' -i healthcheck -u ${MQTT_HEALTHCHECK_USER} -P ${MQTT_HEALTHCHECK_PASS}"
+      interval: 60s
+      timeout: 5s
+      retries: 5
 
   luftdaten2mqtt:
     restart: unless-stopped
@@ -150,6 +160,11 @@ services:
       - "traefik.http.routers.luftdaten2mqtt-rtr.service=luftdaten2mqtt-svc"
       - "traefik.http.routers.luftdaten2mqtt-rtr.middlewares=internal-ips"
       - "traefik.http.services.luftdaten2mqtt-svc.loadbalancer.server.port=8080"
+    healthcheck:
+      test: "curl -f -m6 http://localhost:8080/status | grep OK"
+      interval: 60s
+      timeout: 5s
+      retries: 2
 
   # mDNS/Bonjour/SSDP repeater
   # based on https://github.com/alsmith/multicast-relay
