--- a/homeassistant-config/automations/kitchen/kitchen-light-on-when-home.yaml
+++ b/homeassistant-config/automations/kitchen/kitchen-light-on-when-home.yaml
@@ -10,4 +10,5 @@ action:
   - type: turn_on
     device_id: ad4c1d8bfb64f18fc463e8f6c33aa33c
     entity_id: 95ee82417cede0b115cde0a2c21d2a9a
+    domain: switch
 mode: single
