--- a/homeassistant-config/scripts.yaml
+++ b/homeassistant-config/scripts.yaml
@@ -130,3 +130,22 @@ update_shelly_firmware:
       payload: announce
   mode: single
   icon: mdi:update
+bgradio:
+  alias: БГ Радио
+  sequence:
+  - service: media_player.volume_set
+    data:
+      volume_level: 0.15
+    target:
+      entity_id: media_player.dining_room_speaker
+  - service: media_player.play_media
+    data:
+      media_content_id: http://stream.radioreklama.bg/bgradio128
+      media_content_type: music
+      extra:
+        title: БГ Радио
+        stream_type: LIVE
+    target:
+      entity_id: media_player.dining_room_speaker
+  mode: single
+  icon: mdi:alpha-b
