--- a/homeassistant-config/scripts.yaml
+++ b/homeassistant-config/scripts.yaml
@@ -149,3 +149,20 @@ bgradio:
       entity_id: media_player.dining_room_speaker
   mode: single
   icon: mdi:alpha-b
+disney_audio_tales_random:
+  alias: Disney Audio Tales - RANDOM
+  sequence:
+  - service: media_player.volume_set
+    data:
+      volume_level: 0.22
+    target:
+      entity_id: media_player.dining_room_speaker
+  - service: media_player.play_media
+    data:
+      media_content_id: media-source://media_source/local/disney-audioprikazki/{{
+        state_attr('input_select.disney_audio_tales', 'options') | random }}
+      media_content_type: music
+    target:
+      entity_id: media_player.dining_room_speaker
+  mode: single
+  icon: mdi:teddy-bear
