--- a/esphome/modules/common-base.yaml
+++ b/esphome/modules/common-base.yaml
@@ -1,24 +1,50 @@
 ---
+# Base project substitutions
 substitutions:
-  project_name: "zeridon.unnamed-project"
-  project_version: "0.0.0-dev"
+  project_name: "unnamed-project"
+  project_version: "20241023"
 
 esphome:
-  name: ${name}
+  name: ${device_name}
+  friendly_name: ${device_friendly_name}
+  comment: ${device_description}
   name_add_mac_suffix: true
   project:
-    name: ${project_name}
+    name: "zeridon.${project_name}"
     version: ${project_version}
 
 packages:
-  wifi: !include common/wifi.yaml
-  ota: !include common/ota.yaml
-  sensors: !include common/sensors.yaml
-  binary_sensors: !include common/binary_sensors.yaml
-  time: !include common/time.yaml
+  # log at warning and not on serial
   logger: !include common/logger.yaml
+
+  # Native Api
   api: !include common/api.yaml
-  switches: !include common/switches.yaml
-  buttons: !include common/buttons.yaml
+
+  # OTA
+  ota: !include common/ota.yaml
+
+  # MDNS (extend the services if needed. None are defined)
+  mdns: !include common/mdns.yaml
+
+  # time (pick one or more). Read https://esphome.io/components/host
+  time: !include common/time/homeassistant.yaml
+  #time: !include common/time/sntp.yaml
+  #time: !include common/time/host.yaml
+
+  # WIFI
+  wifi: !include common/wifi.yaml
   captive_portal: !include common/captive_portal.yaml
+
+  # generic sensors
+  sensors: !include common/sensors.yaml
+  text_sensors: !include common/text_sensors.yaml
+  binary_sensors: !include common/binary_sensors.yaml
+
+  # generic switches
+  switches: !include common/switches.yaml
+
+  # generic buttons (factory, reboot, safemode)
+  buttons: !include common/buttons.yaml
+
+  # Web server
   web_server: !include common/web_server.yaml
