--- a/esphome/modules/common/buttons/restart.yaml
+++ b/esphome/modules/common/buttons/restart.yaml
@@ -1,4 +1,4 @@
 ---
 platform: restart
-name: "${friendly_name} Restart"
-id: restart_button
+name: "${device_friendly_name} Restart"
+id: button_restart
