--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -135,11 +135,11 @@ services:
       - svcs
     environment:
       - TZ=$TZ
-    healthcheck:
-          test: 'curl -m 90 -sLf http://localhost:8123 || date >> /config/healthcheck' #| pkill -9 python3'
-          interval: 90s
-          timeout: 60s
-          retries: 2
+    #healthcheck:
+    #      test: 'curl -m 90 -sLf http://localhost:8123 || date >> /config/healthcheck' #| pkill -9 python3'
+    #      interval: 90s
+    #      timeout: 60s
+    #      retries: 2
 
   mqtt:
     restart: always
